--- a/part1/estrutura.html
+++ b/part1/estrutura.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
+    <script>dayjs.locale('pt-br')</script>
     <title>planne.er</title>
 </head>
+
 <body>
-    <h1>Atividades</h1>
 
 
-    <section>
-    <div>
-       
-        <input type="checkbox">
-        <span>Academia em grupo</span>
-        <time> sabado, 18 de abril ás 08:00h</time>
-    </div>
-</section>
-<script src="script.js"></script>
+    <form onsubmit="salvarAtividade(event)">
+
+        <div>
+            <input type="text" placeholder="qual a atividade?" name="atividade"
+            required>
+        </div>
+        <div>
+            <select name="dia">
+                <option value="2024-03-02">01 de fevereiro</option>
+            </select>
+        </div>
+        <div>
+            <select name="hora">
+                <option value="10:30">10:30</option>
+            </select>
+        </div>
+      <button>Salvar atvididade</button>
+
+    </form>
+    <main>
+        <h1>atividades</h1>
+        <section></section>
+    </main>
+    <script src="script.js"></script>
 </body>
+
 </html>
